--- a/projects/metronomo/index.html
+++ b/projects/metronomo/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 	
 	<title>Metrônomo - Rockstar</title>
-	<link rel="stylesheet" href="src/style.scss">
+	<link rel="stylesheet" href="src/style.css">
 
 </head>
 <body>
@@ -42,7 +42,6 @@
 	    </div>
 	</div>
 
-	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="js/metronomo.js"></script>
 
 </body>
