--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <p></p>
                 </div>            
                 <div class="col-lg-3 col-md-4 col-lg-offset-3">
-                    <img src="img/lucasnovaes(2).jpg" class="img-profile img-responsive" alt="Profile photo">
+			<video src=https://youtu.be/0YB5BjeB4jk"></video>
 		</div>
                 <div class="col-lg-5 col-md-6">
 		     <h3>Lucas Marcondes Novaes</h3>
