--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">Desenvolvimento de Sistemas Web</h1>
                 <hr>
-                <h2>Plataforma Web, Website, Landing Page, Email Marketing e Aplicativo Android</h2>
+                <h2>Plataforma Web, Website, Landing Page, Email Marketing e Aplicativo Mobile</h2>
                 <h2>UX / UI Design</h2><br/><br/>
                 <a href="#about" class="btn btn-primary page-scroll"><i class="fa fa-2x fa-angle-double-down"></i></a>
             </div>
@@ -86,11 +86,11 @@
                     <p></p>
                 </div>            
                 <div class="col-lg-3 col-md-4 col-lg-offset-3">
-			<img src="img/lucasnovaes(2).jpg" class="img-profile img-responsive" alt="Profile photo">
+			<img src="img/lucasnovaes-avatar.png" class="img-profile img-responsive" alt="Profile photo">
 		</div>
                 <div class="col-lg-5 col-md-6">
 		     <h3>Lucas Marcondes Novaes</h3>
-			<p>Desenvolvedor Web há 4 anos<br>
+			<p>Desenvolvedor Web desde 2014<br>
 			Bacharel em Sistemas de Informação, PUC Minas-2015</p>
                 </div>
             </div>
