--- a/index.html
+++ b/index.html
@@ -68,10 +68,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Desenvolvimento de Sistemas Web</h1>
+                <h1 id="homeHeading">Analista e Desenvolvedor de Sistemas</h1>
                 <hr>
-                <h2>Plataforma Web, Website, Landing Page, Email Marketing e Aplicativo Mobile</h2>
-                <h2>UX / UI Design</h2><br/><br/>
+                <h2>Construo ideias e soluções otimizadas para clientes especiais</h2>
                 <a href="#about" class="btn btn-primary page-scroll"><i class="fa fa-2x fa-angle-double-down"></i></a>
             </div>
         </div>
@@ -89,7 +88,7 @@
 			<img src="img/lucasnovaes-avatar.png" class="img-profile img-responsive" alt="Profile photo">
 		</div>
                 <div class="col-lg-5 col-md-6">
-		     <h3>Lucas Marcondes Novaes</h3>
+		     <h3>Lucas M. Novaes</h3>
 			<p>Desenvolvedor Web desde 2014<br>
 			Bacharel em Sistemas de Informação, PUC Minas-2015</p>
                 </div>
@@ -112,31 +111,34 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-file-code-o text-primary sr-icons"></i>
                         <h3>Linguagens de programação</h3>
-                        <p class="text-muted">Java <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
-                        <p class="text-muted">PHP <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
-                        <p class="text-muted">SQL <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
-                        <p class="text-muted">C# <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
-                        <p class="text-muted">JavaScript <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
-                        <p class="text-muted">CSS3 <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
-                        <p class="text-muted">HTML5 <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
+                        <p class="text-muted">Java</p>
+                        <p class="text-muted">PHP</p>
+			<p class="text-muted">C#</p>
+                        <p class="text-muted">JavaScript</p>
+                        <p class="text-muted">CSS3</p>
+                        <p class="text-muted">HTML5</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
                         <h3>Frameworks</h3>
-                        <p class="text-muted">RichFaces <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
-                        <p class="text-muted">Hibernate <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
-                        <p class="text-muted">Bootstrap <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
-                        <p class="text-muted">JQuery <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
+			<p class="text-muted">Zend</p>
+                        <p class="text-muted">RichFaces</p>
+                        <p class="text-muted">Hibernate</p>
+                        <p class="text-muted">Bootstrap</p>
+                        <p class="text-muted">JQuery</p>
+			<p class="text-muted">E outros...</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
                         <h3>Controle de versão</h3>
-                        <p class="text-muted">GitHub <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
-                        <p class="text-muted">SVN <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
+                        <p class="text-muted">GitHub</p>
+			<p class="text-muted">GitLab</p>
+			<p class="text-muted">Bitbucket</p>
+                        <p class="text-muted">SVN</p>
                     </div>
                 </div>
             </div>   
@@ -145,23 +147,24 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-cubes text-primary sr-icons"></i>
                         <h3>Metodologias/IDE's</h3>
-                        <p class="text-muted">SCRUM Ágil <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
-                        <p class="text-muted">WordPress <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
-                        <p class="text-muted">Android Studio <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
-			<p class="text-muted">Eclipse <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
-                        <p class="text-muted">NetBeans <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
-                        <p class="text-muted">Sublime Text <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
-                        <p class="text-muted">Notepad++ <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
+                        <p class="text-muted">SCRUM Ágil</p>
+                        <p class="text-muted">WordPress</p>
+                        <p class="text-muted">Android Studio</p>
+			<p class="text-muted">Eclipse</p>
+                        <p class="text-muted">NetBeans</p>
+                        <p class="text-muted">Sublime Text</p>
+                        <p class="text-muted">Notepad++</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-database text-primary sr-icons"></i>
                         <h3>Banco de Dados</h3>
-                        <p class="text-muted">Postgresql <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
-                        <p class="text-muted">MySQL <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
-                        <p class="text-muted">phpMyAdmin <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
-                        <p class="text-muted">SQL Server <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
+			<p class="text-muted">Oracle</p>
+                        <p class="text-muted">Postgresql</p>
+                        <p class="text-muted">MySQL</p>
+                        <p class="text-muted">phpMyAdmin</p>
+                        <p class="text-muted">SQL Server</p>
                     </div>
                 </div>
             </div>
