--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 				      </div>
 				      <div class="modal-body">
 					<p></p>
-				        <p>Desenvolvimento de algoritmo em PHP para exibir um ranking de autores por número de artigos produzidos, exibindo o perfil de cada um;</p>
+				        <p>Desenvolvimento de funcionalidade em linguagem PHP</p>
 					<p><strong>Link: <a href="http://empreendedoras.com.br" target="_blank">empreendedoras.com.br</a></strong></p>
 				      </div>
 				      <div class="modal-footer">
