--- a/index.html
+++ b/index.html
@@ -180,7 +180,43 @@
                 </div>
             </div>
             <div class="row no-gutter">
-
+                <div class="col-lg-4 col-sm-6">
+                    <div class="portfolio-box" data-toggle="modal" data-target="#modal1">
+                        <img src="img/portfolio/thumbnails/rockster-foto.png" class="img-responsive" alt="rockster">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Desenvolvedor - Rockster<br/>
+                                    (2018)
+                                </div>
+                                <div class="project-name">
+                                    Projeto: Plataforma Rockster
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Modal -->
+				<div id="modal1" class="modal fade" role="dialog">
+				  <div class="modal-dialog">
+				    <!-- Modal content-->
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <button type="button" class="close" data-dismiss="modal">&times;</button>
+				        <h4 class="modal-title">Detalhes</h4>
+				      </div>
+				      <div class="modal-body">
+				        <p>Desenvolvimento de plataforma web em PHP, aplicativo mobile Android e híbrido;</p>
+					<p>Gerenciamento de todo o projeto desde sua concepção até a entrega;</p>			        
+				        <p><strong>Link (Plataforma): <a href="https://rockster.com.br/" target="_blank">Plataforma Rockster</a></strong></p>
+					<p><strong>Link (Aplicativo Android): <a href="https://play.google.com/store/apps/details?id=com.app.afinador_rockstar" target="_blank">Afinador Rockster</a></strong></p>
+				      </div>
+				      <div class="modal-footer">
+				        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+				      </div>
+				    </div>
+				  </div>
+				</div>
                 <div class="col-lg-4 col-sm-6">
                     <div class="portfolio-box" data-toggle="modal" data-target="#modal1">
                         <img src="img/portfolio/thumbnails/arouca-foto.png" class="img-responsive" alt="arouca">
@@ -447,7 +483,7 @@
 	    <div class="container">
 	    	 <div class="row">
 	    	 	<div class="col-lg-12">
-	    			Lucasmnovaes - 2017
+	    			Lucasmnovaes - 2019
 	    		</div>
 	    	</div>		
 	    </div>
