--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
 				      <div class="modal-body">
 				        <p>Desenvolvimento de plataforma web em PHP, aplicativo mobile Android e híbrido;</p>
 					<p>Gerenciamento de todo o projeto desde sua concepção até a entrega;</p>			        
-				        <p><strong>Link (Plataforma): <a href="https://rockster.com.br/" target="_blank">Plataforma Rockster</a></strong></p>
-					<p><strong>Link (Aplicativo Android): <a href="https://play.google.com/store/apps/details?id=com.app.afinador_rockstar" target="_blank">Afinador Rockster</a></strong></p>
+				        <p><strong>Link (Plataforma): <a href="https://rockster.com.br/" target="_blank">rockster.com.br</a></strong></p>
+					<p><strong>Link (Aplicativo Android): <a href="https://play.google.com/store/apps/details?id=com.app.afinador_rockstar" target="_blank">play.google.com/store</a></strong></p>
 				      </div>
 				      <div class="modal-footer">
 				        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
