--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 		    
                 <div class="col-lg-3 col-lg-offset-3 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p><a href="tel:(31) 99407-0476">(31) 99407-0476</a></p>
+                    <p><a href="tel:31994070476">(31)99407-0476</a> | <a href="tel:31971496777">(31)97149-6777</a></p>
                 </div>
                 <div class="col-lg-3 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
@@ -463,7 +463,7 @@
                 </div>
 		    
 		<div class="col-lg-1 col-lg-offset-4 col-md-2 col-md-offset-2 col-xs-3 text-center">
-                    <p><a href="https://www.facebook.com/lucasmarconds"><i class="fa fa-facebook fa-3x sr-contact"></i></a></p>
+                    <p><a href="https://www.facebook.com/lucasmrcnovaes"><i class="fa fa-facebook fa-3x sr-contact"></i></a></p>
                 </div>
 		<div class="col-lg-1 col-md-2 col-xs-3 text-center">
                     <p><a href="https://github.com/LucasNovaes"><i class="fa fa-github fa-3x sr-contact"></i></a></p>
