--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 		    
                 <div class="col-lg-3 col-lg-offset-3 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p><a href="tel:31994070476">(31)99407-0476</a> | <a href="tel:31971496777">(31)97149-6777</a></p>
+                    <p><a href="tel:31971496777">(31) 97149-6777</a></p>
                 </div>
                 <div class="col-lg-3 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
