--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                 </div>
                 <div class="col-lg-3 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:lucasmnovaes@gmail.com">lucasmnovaes@gmail.com</a></p>
+                    <p><a href="mailto:lucas.lmnsistemas@gmail.com">lucas.lmnsistemas@gmail.com</a></p>
                 </div>
 		    
 		<div class="col-lg-1 col-lg-offset-4 col-md-2 col-md-offset-2 col-xs-3 text-center">
