--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">Analista e Desenvolvedor de Sistemas</h1>
                 <hr>
-                <h2>Construo ideias e soluções otimizadas para clientes especiais</h2>
+                <h2>Construindo ideias e soluções otimizadas a clientes especiais</h2>
                 <a href="#about" class="btn btn-primary page-scroll"><i class="fa fa-2x fa-angle-double-down"></i></a>
             </div>
         </div>
