--- a/index.html
+++ b/index.html
@@ -468,20 +468,20 @@
                     <p></p>
                 </div>
 
-                <div class="col-lg-3 col-lg-offset-3 text-center">
+                <!-- <div class="col-lg-3 col-lg-offset-3 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
                     <p><a href="tel:31971496777">(31) 97149-6777</a></p>
-                </div>
-                <div class="col-lg-3 text-center">
+                </div> -->
+                <div class="col-lg-12 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
                     <p><a href="mailto:lucas.lmnsistemas@gmail.com">lucas.lmnsistemas@gmail.com</a></p>
                 </div>
 
-                <div class="col-lg-1 col-lg-offset-4 col-md-2 col-md-offset-2 col-xs-3 text-center">
-                    <!-- <p><a href="https://www.facebook.com/lucasmrcnovaes"><i
+                <!-- <div class="col-lg-1 col-lg-offset-4 col-md-2 col-md-offset-2 col-xs-3 text-center"> -->
+                <!-- <p><a href="https://www.facebook.com/lucasmrcnovaes"><i
                                 class="fa fa-facebook fa-3x sr-contact"></i></a></p> -->
-                </div>
-                <div class="col-lg-1 col-md-2 col-xs-3 text-center">
+                <!-- </div> -->
+                <div class="col-lg-1 col-lg-offset-4 col-md-2 col-md-offset-2 col-xs-3 text-center">
                     <p><a href="https://github.com/LucasNovaes"><i class="fa fa-github fa-3x sr-contact"></i></a>
                     </p>
                 </div>
